# twitter-clone-rust

./: .env  .gitignore  .qovery.yml  Cargo.toml  Dockerfile  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: constants.rs  like.rs  main.rs  response.rs  schema.rs  test.txt  tweet.rs
test_db/: docker-compose.yml  readme.txt
