[package]
name = "twitter-clone-rust"
version = "1.0.0"
authors = ["Romaric Philogene <rphilogene@qovery.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
serde = { version= "1.0.194" , features = ["derive"] }
serde_json = "1.0.111"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
env_logger = "0.10.1"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
